<resources>
    <string name="app_name">Smars Notary</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_flowdetails_list">Items</string>
    <string name="title_flowdetails_detail">FlowDetails Detail</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_acceuil">AcceuilActivity</string>
    <string name="title_activity_profil_notaire">ProfilNotaireActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_main_notaire">MainNotaireActivity</string>
    <string name="les_professions_judiciaires">Les professions judiciaires du second cercle pratiquées en Haiti sont les professions de notaires et d\'arpenteurs</string>
    <string name="title_professions_judiciaires">LES PROFESSIONS JUDICIAIRES</string>
    <string name="titles_les_notaires">LES NOTAIRES</string>
    <string name="le_notariat">Le notariat a été longtemps régi par la loi du 24 février 1919. Il l’est aujourd’hui par le décret du 27 novembre 1969.</string>
    <string name="titles_les_attributions">Les attributions et les répartitions des notaires.</string>
    <string name="mot_de_passe">\t\t Mot de passe :</string>
    <string name="t_l_phone">\t\t Téléphone :</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="mot_de_passe_oubli"><u>Mot de passe Oublié</u></string>
    <string name="cr_er_compte">Créer Compte</string>
    <string name="propos"><u>À Propos</u></string>
    <string name="first_name">\t Prénom :</string>
    <string name="last_name">\t Nom :</string>
    <string name="nif">\t Nif :</string>
    <string name="adresse_cabinet">\t Adresse Cabinet :</string>
    <string name="date_commission_yyyy_mm_dd">\t Date commission :</string>
    <string name="email">\t Email :</string>
    <string name="confirmer_mot_de_passe">\t Confirmer mot de passe :</string>
    <string name="mot_de_passe_r">\t Mot de passe :</string>
    <string name="t_l_phone_r">\t Téléphone :</string>
    <string name="register">\t\t\t Enregistrer \t\t\t</string>
    <string name="date_de_naissance_yyyy_mm_dd">\tDate de Naissance :</string>
    <string name="application_develo">Application developpe apres un Bootcamp organisé par Transition Digital / Codepath en Haïti à l\'institution Saint Louis de Gonzague. SmarsNotary avant, et dans le but de faire veleur de la langue Créole nous avons décider de changer à <u>Notè Peyim</u><br />
        L\' à pour objectif d\'apporter une meilleure visibilité au notaire du pays et aidé la population à mieux comprendre le système notarier.
    </string>
    <string name="choisir_date_et_heure_de_r_union">Cliquer pour choisir date et heure de réunion :</string>
    <string name="_lemariage">
        Pour contracter mariage en Haïti, selon l\'article 133 du Code civil stipule que l\'homme doit avoir dix huit ans accomplis et la femme quinze ans révolus. Cependant, le président de la République peut accorder une dispense d\'ages pour des motifs graves à ceux qui en font la demande. Pour qu\'il y ait mariage entre deux futurs conjoints la loi exige le consentement libre et éclairé entre des deux personnes intéressées qui s\'engagent. La volonté de s\'engager dans la vie commune doit être manifeste, libre de toute contrainte physique ou autre. Sinon, on peut de demander la nullité pur et simple. Le consentement volontaire constitue l\'une des conditions obligatoires que la loi impose à l\'officier d\'état civil ou au prêtre ou au pasteur qui officine une telle cérémonie. C\'est une priorité fondamentale pour qu\'on puisse parler de mariage entre deux personnes saines d\'esprit. Voici les pièces requises par l\'officier d\'état civil ou par le prêtre lorsqu\'on envisage de s\'engager :

Copie originale de l\'acte de naissance des futurs époux en bonne et due forme ;
Preuve de résidence ou de domicile de l\'un des époux dans la ville.
Carte d\'identité valide des futurs époux ;
Certificat prénuptial des futurs époux émis par l\'institut du bien être social et de recherches (IBESR) selon les prescriptions de la loi du 12 septembre 1961 créant le certificat prénuptial pour les futurs conjoints.
Les frais de services à payer pour l\'obtention de l\'acte de mariage.
Ces pièces sont exigibles non seulement par l\'officier d\'état civil dans le cadre d\'un mariage civil, mais elles sont aussi requises par le ministre des cultes qui célèbre le mariage religieux. Tout dépendant de l\'officier d\'état civil ou de la ville dans laquelle le mariage va être célébré, l\'on peut être dispensé de fournir le certificat prénuptial.

Le fait pour une personne de contracter mariage constitue un acte trop important pour qu\'il soit tenu secret et la loi exige que le public en soit averti. La raison qui explique la publication des bans pour le mariage est fort simple. Le but de cette publication consiste à informer l\'opinion publique et à aviser des personnes qui ont intérêt à se manifester pour faire opposition à ce mariage. En réalité, la publication des bans consiste en des annonces faites dans les églises ou temples de la croyance des futurs époux à trois services divins différents.

L\'article 63 du Code civil évoque aussi cette situation de fait même pour un officier d\'état civil. L\'église catholique, en vertu de ses lois, peut accorder une dispense de toute publication. Autrefois, ceux qui désiraient se marier devraient absolument passer par les services des ministres des cultes (curé ou prêtre de la paroisse). Eux seuls étaient autorisés par la loi à célébrer les mariages. Le couple qui n\'entretenait aucune croyance religieuse devait alors se plier à des cérémonies qui n\'avaient aucun sens pour lui. S'il refusait de passer par l'église, il était réduit à vivre en concubinage et l'enfant qui naissait de cette union devait être nécessairement considéré comme illégitime. Autrefois dans les milieux paysans haïtiens, si on se ne mariait pas le prêtre refusait catégoriquement de baptiser l'enfant à l'église voire chanter un enterrement. Maintenant, la situation est révolue en Haïti.

L'officier d'état civil dans chaque commune de la république d'Haïti est chargé par le législateur de célébrer les mariages civils. Lorsque les futurs époux remplissent les conditions prévues par la loi, s'ils sont majeurs ou mineurs autorisés, et s'ils sont libres, soit célibataires ou divorcés, l'officier d'état civil ne peut refuser de les marier. Il en de même lorsqu'il n'existe aucun empêchement physique ou aucun lien de consanguinité (frère et soeur, père et fille, mère et fils, etc.)entre les futurs époux. Le mariage civil est une nouvelle forme de mariage qui a été instituée en Haïti en vue de respecter les idées d'une minorité. Le mariage à la fois civil et religieux répond encore aux besoins de la majorité et il est aussi valide, au point de vue légal, que celui célébré devant l'officier d'état civil. Par ailleurs, si on décide de faire un mariage religieux, il n'est pas nécessaire de consulter l'officier d'état civil l'acte de mariage. Le service de l'église s'occupe de l'enregistrement de cet acte auprès du service en question après la célébration du mariage.

Pourtant les gens mal renseignés ont peine à croire que le mariage civil et le mariage religieux produisent les mêmes effets. Ils vont même jusqu'à prétendre que le mariage célébré par un ministre des cultes (curé, pasteur) ne saurait être accepté en pays étranger. Il est important de souligner qu'il ne faudrait pas croire non plus que les mariages consentis devant un officier d'état civil ont moins de valeur que ceux célébrés par l'église. Les obligations civiles découlant de ces mariages sont absolument les mêmes. La cérémonie du mariage civil est fort simple et ne dure que quelques minutes. Elle a lieu dans la ville de domicile de l'un des conjoints.

Au cours de la cérémonie, l'officier d'État civil lit aux futurs époux les articles 189 à 196 du Code civil relatant les obligations qui naissent du mariage ; les droits et les devoirs respectifs des époux. Puis, il requiert et reçoit le consentement de chacun en présence de leur témoin respectif. Il est bon de mentionner que les témoins peuvent être aussi bien des femmes que les hommes, mais la loi exige qu'ils soient majeurs. Par la suite, l'officier d'état civil prononce alors ces mots : «En vertu des pouvoirs qui me sont conférés par la loi, je vous déclare unis par les liens du mariage». Dès que cette cérémonie est terminée, les époux sont légalement mariés et leur union entraîne toutes les conséquences juridiques du mariage civil ou religieux.
    </string>
</resources>